Add backend server for course and video API

--- a/app.json
+++ b/app.json
@@ -33,7 +33,10 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-audio",
+      "expo-video",
+      "react-native-video"
     ],
     "experiments": {
       "typedRoutes": true
