--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.10",
+    "expo-audio": "~0.4.8",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -30,6 +32,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
+    "expo-video": "~2.2.2",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -42,14 +45,15 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-video": "^6.15.0",
+    "react-native-video": "^6.16.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-video": "^5.0.20",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
